<?xml version="1.0"?>
<package>
  <name>leap_motion</name>
  <version>0.0.4</version>
  <description>ROS driver for the Leap Motion gesture sensor</description>

  <maintainer email="flier@techfak.uni-bielefeld.de">Florian Lier</maintainer>
  <maintainer email="mas644@gmail.com">Mirza Shah</maintainer>

  <license>BSD</license>
  <url type="website">https://wiki.ros.org/leap_motion</url>
  <author email="flier@techfak.uni-bielefeld.de">Florian Lier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
