<?xml version="1.0"?>
<package>
  <name>leap_motion</name>
  <version>0.0.4</version>
  <description>ROS driver for the Leap Motion gesture sensor</description>

  <maintainer email="flier@techfak.uni-bielefeld.de">Florian Lier</maintainer>
  <maintainer email="mas644@gmail.com">Mirza Shah</maintainer>

  <license>BSD</license>
  <url type="website">https://wiki.ros.org/leap_motion</url>
  <url type="repository">https://github.com/ros-drivers/leap_motion</url>
  <url type="bugtracker">https://github.com/ros-drivers/leap_motion/issues</url>
  <author email="flier@techfak.uni-bielefeld.de">Florian Lier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>camera_info_maneger</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rospack</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>camera_info_maneger</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rospack</run_depend>
  <export>
  </export>
</package>
