<?xml version="1.0"?>
<package format="2">
  <name>leap_motion</name>
  <version>0.0.12</version>
  <description>ROS driver for the Leap Motion gesture sensor</description>

  <maintainer email="nowittyusername@hotmail.com">Nowittyusername</maintainer>
  <maintainer email="gm130s@gmail.com">Isaac IY Saito</maintainer>

  <license>BSD</license>
  <url type="website">https://wiki.ros.org/leap_motion</url>
  <url type="repository">https://github.com/ros-drivers/leap_motion</url>
  <url type="bugtracker">https://github.com/ros-drivers/leap_motion/issues</url>
  <author email="flier@techfak.uni-bielefeld.de">Florian Lier</author>
  <author email="mas644@gmail.com">Mirza Shah</author>
  <author email="iiysaito@opensource-robotics.tokyo.jp">Isaac IY Saito</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>camera_calibration_parsers</depend>
  <depend>camera_info_manager</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospack</depend> 
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- For backwards compatibility with the old driver files -->
  <depend>image_transport</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <!-- END -->

  <test_depend>rostest</test_depend>
  
  <export>
  </export>
</package>
